--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
+    "@rainbow-me/rainbowkit": "^1.0.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-select": "^5.7.3"
+    "react-select": "^5.7.3",
+    "viem": "^0.3.50",
+    "wagmi": "^1.0.9"
   }
 }
