--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
+    "@paraswap/sdk": "^6.2.1",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
