--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "paraswap-core": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
