--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.13.4",
     "@paraswap/sdk": "^6.2.1",
     "@rainbow-me/rainbowkit": "^1.0.1",
+    "@tanstack/query-core": "^4.29.15",
+    "@tanstack/react-query": "^4.29.15",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -25,5 +27,10 @@
     "react-select": "^5.7.3",
     "viem": "^0.3.50",
     "wagmi": "^1.0.9"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
